# markstay-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/markstay/: __init__.py  cli.py  id.py  lint.py  quote.py  resolve.py  stamp.py
tests/: test_conformance.py  test_mdformat_safety.py  test_stamp.py  test_unit.py
